--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
             <button type="submit">登入</button>
             <br>
             <br>
-            <input type="button" value="使用Line登入（推薦）" onclick="location.href='https://access.line.me/oauth2/v2.1/authorize?response_type=code&client_id=2002942876&redirect_uri=https://i-like-dev.github.io/auth.html&state=12345abcde&scope=openid%20profile%20email&nonce=09876xyz'">
+            <input type="button" value="使用Line登入（推薦）" onclick="location.href='https://i-like-dev.github.io/form-auth-and-login--/auth.html&state=12345abcde&scope=openid%20profile%20email&nonce=09876xyz'">
         </form>
         <div class="error-message" id="errorMessage"></div>
     </div>
