--- a/auth.html
+++ b/auth.html
@@ -10,6 +10,7 @@
         <h1>登入成功！</h1>
         <a href="https://docs.google.com/document/d/e/2PACX-1vQq5eWaPcga3kxvJcm3kRHwyYyZEmmzobqsH_FW2hYjVbh1Q9kGd1y9tnikntuPEhIcC8rZh-q8y0Pf/pub" class="button">查看所有表單</a>
         <p class="update-notice">*每5分鐘更新一次</p>
+        <a href="index.html" class="button">登出系統！</a>
     </div>
 </body>
 </html>
