--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>成績自動計算系統</title>
+    <title>4樓表單授權系統</title>
         <link rel="manifest" href="manifest.json">
     <style>
         body {
